added macquin clustering

--- a/kmeans/KMeans.ipynb
+++ b/kmeans/KMeans.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "1   2  3.33  4.0"
       ]
      },
-     "execution_count": 424,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "5   6  5  6.0"
       ]
      },
-     "execution_count": 425,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +191,22 @@
     "        self.initial_data['key'] = 1\n",
     "        self.data=self.initial_data.copy()\n",
     "    \n",
+    "    def assign_centroids(self, dataframe, i):\n",
+    "        print('\\n\\nITER: '+str(i)+'\\n\\nPrzed assign: \\n', self.data,'\\n', self.centroids)\n",
+    "            \n",
+    "        # compute euclidan distance for all combinations\n",
+    "        df_tmp = dataframe.merge(self.centroids, how='outer')\n",
+    "        df_tmp['distance'] = df_tmp.apply(lambda x: np.linalg.norm(\n",
+    "            x[self.data.columns.values.tolist()[1:-2]].values\n",
+    "            -x[self.centroids.columns.values.tolist()[1:-1]].values),axis=1)\n",
+    "\n",
+    "        # assign centroid that is closest to the record\n",
+    "        df_tmp=df_tmp.sort_values(['id_d','distance']).drop_duplicates(['id_d'],keep='first')\n",
+    "        df_tmp.reset_index(inplace=True)\n",
+    "        df_tmp['k_d']=df_tmp['id_c']\n",
+    "        df_tmp=df_tmp[self.data.columns.values.tolist()].copy()\n",
+    "        return df_tmp\n",
+    "    \n",
     "    def calculate_centroids(self):\n",
     "        cols=self.centroids.columns\n",
     "        self.centroids=self.data.drop('id_d', axis=1).groupby(['k_d']).agg(['mean'])\n",
@@ -204,18 +220,9 @@
     "        for i in range(iter):\n",
     "            print('\\n\\nITER: '+str(i)+'\\n\\nPrzed assign: \\n', self.data,'\\n', self.centroids)\n",
     "            \n",
-    "            # compute euclidan distance for all combinations\n",
-    "            df_tmp = self.data.merge(self.centroids, how='outer')\n",
-    "            df_tmp['distance'] = df_tmp.apply(lambda x: np.linalg.norm(\n",
-    "                x[self.data.columns.values.tolist()[1:-2]].values\n",
-    "                -x[self.centroids.columns.values.tolist()[1:-1]].values),axis=1)\n",
-    "\n",
-    "            # assign centroid that is closest to the record\n",
-    "            df_tmp=df_tmp.sort_values(['id_d','distance']).drop_duplicates(['id_d'],keep='first')\n",
-    "            df_tmp.reset_index(inplace=True)\n",
-    "            df_tmp['k_d']=df_tmp['id_c']\n",
-    "            self.data=df_tmp[self.data.columns.values.tolist()].copy()\n",
+    "            self.data=self.assign_centroids(self.data, i)\n",
     "            print('\\nPo assign: \\nDane\\n', self.data)\n",
+    "            \n",
     "            # update centroids\n",
     "            self.calculate_centroids()\n",
     "            print('\\nPo calc cntroids: \\nCentroidy\\n', self.centroids)\n",
@@ -225,12 +232,22 @@
     "        self.data=self.initial_data.copy()\n",
     "        self.centroids=self.initial_centroids.copy()\n",
     "        for index,row in self.data.iterrows():\n",
-    "            print(row[1])\n"
+    "            i=0\n",
+    "            # turn row of dataframe with updated point into a dataframe\n",
+    "            row = pd.DataFrame(row).T\n",
+    "\n",
+    "            # assign centroid to updated point\n",
+    "            self.data.update(self.assign_centroids(self.data, i))\n",
+    "            print('\\nPo assign: \\nDane\\n', self.data)\n",
+    "            \n",
+    "            # update centroids\n",
+    "            self.calculate_centroids()\n",
+    "            print('\\nPo calc cntroids: \\nCentroidy\\n', self.centroids)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,28 +256,454 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ex4.Lloyd(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
-      "1.0\n",
-      "2.0\n",
-      "2.0\n",
-      "3.0\n",
-      "5.0\n"
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5   -1    1\n",
+      "1     2    1  4.5   -1    1\n",
+      "2     3    2  1.5   -1    1\n",
+      "3     4    2  3.5   -1    1\n",
+      "4     5    3  2.5   -1    1\n",
+      "5     6    5  6.0   -1    1 \n",
+      "    id_c   x_c  y_c  key\n",
+      "0     1  1.33  2.5    1\n",
+      "1     2  3.33  4.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5   -1    1\n",
+      "1     2    1  4.5   -1    1\n",
+      "2     3    2  1.5   -1    1\n",
+      "3     4    2  3.5   -1    1\n",
+      "4     5    3  2.5   -1    1\n",
+      "5     6    5  6.0   -1    1 \n",
+      "    id_c   x_c  y_c  key\n",
+      "0     1  1.33  2.5    1\n",
+      "1     2  3.33  4.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    2    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c   y_c  key\n",
+      "0     1  1.5  2.75    1\n",
+      "1     2  4.0  4.25    1\n",
+      "\n",
+      "\n",
+      "ITER: 1\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    2    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c   y_c  key\n",
+      "0     1  1.5  2.75    1\n",
+      "1     2  4.0  4.25    1\n",
+      "\n",
+      "\n",
+      "ITER: 1\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    2    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c   y_c  key\n",
+      "0     1  1.5  2.75    1\n",
+      "1     2  4.0  4.25    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 2\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 2\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 3\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 3\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 4\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 4\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "ex4.Lloyd(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex4 = Kmeans(centroids,data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5   -1    1\n",
+      "1     2    1  4.5   -1    1\n",
+      "2     3    2  1.5   -1    1\n",
+      "3     4    2  3.5   -1    1\n",
+      "4     5    3  2.5   -1    1\n",
+      "5     6    5  6.0   -1    1 \n",
+      "    id_c   x_c  y_c  key\n",
+      "0     1  1.33  2.5    1\n",
+      "1     2  3.33  4.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    2    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c   y_c  key\n",
+      "0     1  1.5  2.75    1\n",
+      "1     2  4.0  4.25    1\n",
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    2    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c   y_c  key\n",
+      "0     1  1.5  2.75    1\n",
+      "1     2  4.0  4.25    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "\n",
+      "ITER: 0\n",
+      "\n",
+      "Przed assign: \n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1 \n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n",
+      "\n",
+      "Po assign: \n",
+      "Dane\n",
+      "    id_d  x_d  y_d  k_d  key\n",
+      "0     1    1  1.5    1    1\n",
+      "1     2    1  4.5    1    1\n",
+      "2     3    2  1.5    1    1\n",
+      "3     4    2  3.5    1    1\n",
+      "4     5    3  2.5    1    1\n",
+      "5     6    5  6.0    2    1\n",
+      "\n",
+      "Po calc cntroids: \n",
+      "Centroidy\n",
+      "    id_c  x_c  y_c  key\n",
+      "0     1  1.8  2.7    1\n",
+      "1     2  5.0  6.0    1\n"
      ]
     }
    ],
@@ -278,9 +721,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3env",
    "language": "python",
-   "name": "python3"
+   "name": "py3env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -292,7 +735,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
