--- a/kmeans/KMeans.ipynb
+++ b/kmeans/KMeans.ipynb
@@ -172,18 +172,18 @@
         "    def MacQueen(self, make_plots=False):\n",
         "        i=0\n",
         "        while True:\n",
-        "            print('ITERATION', i, datetime.now())\n",
-        "            if make_plots:\n",
-        "              self.plot_clusters(self.points, self.centroids, i)   \n",
+        "          print('ITERATION', i, datetime.now())\n",
+        "          if make_plots:\n",
+        "            self.plot_clusters(self.points, self.centroids, i)   \n",
         "\n",
-        "            clusters_before = self.points[:,-2].copy()\n",
-        "            self.assign_clusters(macqueen=True)\n",
-        "            clusters_after = self.points[:,-2].copy()\n",
-        "            #check if algorithm converged\n",
-        "            if not any(c_before != c_after for c_before, c_after in zip(clusters_before,clusters_after)):\n",
-        "              break\n",
-        "            self.calculate_all_centroids()\n",
-        "            i=i+1\n",
+        "          clusters_before = self.points[:,-2].copy()\n",
+        "          self.assign_clusters(macqueen=True)\n",
+        "          clusters_after = self.points[:,-2].copy()\n",
+        "          #check if algorithm converged\n",
+        "          if not any(c_before != c_after for c_before, c_after in zip(clusters_before,clusters_after)):\n",
+        "            break\n",
+        "          #self.calculate_all_centroids()\n",
+        "          i=i+1\n",
         "\n",
         "\n",
         "    def Lloyd(self, make_plots=False):\n",
@@ -252,17 +252,17 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 366
         },
-        "outputId": "044ee918-3f1b-468d-b704-9e93fbb822d6"
+        "outputId": "831771cb-5f4f-4056-aafe-9cabaa9a5912"
       },
       "source": [
         "# Own implementation testing:\n",
-        "#ex4=Kmeans(2, data_htru)\n",
-        "#ex4.initialize_clusters()\n",
-        "#ex4.MacQueen(make_plots=False)\n",
-        "#own_NMI= normalized_mutual_info_score(data_htru_raw[:,-1], ex4.points[:,-2])\n",
-        "#print(own_NMI)\n",
+        "ex4=Kmeans(2, data_htru)\n",
+        "ex4.initialize_clusters()\n",
+        "ex4.MacQueen(make_plots=False)\n",
+        "own_NMI= normalized_mutual_info_score(data_htru_raw[:,-1], ex4.points[:,-2])\n",
+        "print(own_NMI)\n",
         "\n",
         "#Sklearn clustering to compare\n",
         "from sklearn.cluster import KMeans\n",
@@ -271,11 +271,29 @@
         "\n",
         "print(sklearn_NMI)"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "ITERATION 0 2020-03-22 12:49:52.153202\n",
+            "ITERATION 1 2020-03-22 12:49:52.617683\n",
+            "ITERATION 2 2020-03-22 12:49:52.802889\n",
+            "ITERATION 3 2020-03-22 12:49:52.968688\n",
+            "ITERATION 4 2020-03-22 12:49:53.114894\n",
+            "ITERATION 5 2020-03-22 12:49:53.260394\n",
+            "ITERATION 6 2020-03-22 12:49:53.394365\n",
+            "ITERATION 7 2020-03-22 12:49:53.544444\n",
+            "ITERATION 8 2020-03-22 12:49:53.674894\n",
+            "ITERATION 9 2020-03-22 12:49:53.808721\n",
+            "ITERATION 10 2020-03-22 12:49:53.937517\n",
+            "ITERATION 11 2020-03-22 12:49:54.071056\n",
+            "ITERATION 12 2020-03-22 12:49:54.207138\n",
+            "ITERATION 13 2020-03-22 12:49:54.340502\n",
+            "ITERATION 14 2020-03-22 12:49:54.473557\n",
+            "ITERATION 15 2020-03-22 12:49:54.608775\n",
+            "ITERATION 16 2020-03-22 12:49:54.737772\n",
+            "0.02649673183252321\n",
             "0.02643778644792407\n"
           ],
           "name": "stdout"
