--- a/kmeans/KMeans.ipynb
+++ b/kmeans/KMeans.ipynb
@@ -180,7 +180,8 @@
         "          self.assign_clusters(macqueen=True)\n",
         "          clusters_after = self.points[:,-2].copy()\n",
         "          #check if algorithm converged\n",
-        "          if not any(c_before != c_after for c_before, c_after in zip(clusters_before,clusters_after)):\n",
+        "          if not any(c_before != c_after for c_before, c_after \n",
+        "                     in zip(clusters_before,clusters_after)):\n",
         "            break\n",
         "          #self.calculate_all_centroids()\n",
         "          i=i+1\n",
@@ -196,7 +197,8 @@
         "          self.assign_clusters(macqueen=False)\n",
         "          clusters_after = self.points[:,-2].copy()\n",
         "          #check if algorithm converged\n",
-        "          if not any(c_before != c_after for c_before, c_after in zip(clusters_before,clusters_after)):\n",
+        "          if not any(c_before != c_after for c_before, c_after \n",
+        "                     in zip(clusters_before,clusters_after)):\n",
         "              break\n",
         "          self.calculate_all_centroids()\n",
         "          i=i+1\n",
@@ -210,7 +212,7 @@
       "metadata": {
         "id": "zLP8qyzQqhRg",
         "colab_type": "code",
-        "outputId": "bbe816d2-8c86-4a73-c5ba-6d801f1b879d",
+        "outputId": "c04d29f3-0e7e-476c-85e7-d6c58abdd5d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -233,7 +235,7 @@
         "data_skin=data_skin_raw[:, 0:-1].copy()  \n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +256,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 366
         },
-        "outputId": "831771cb-5f4f-4056-aafe-9cabaa9a5912"
+        "outputId": "a2f84c23-984c-4a1e-f29a-0c4aa09024a3"
       },
       "source": [
         "# Own implementation testing:\n",
@@ -262,71 +264,41 @@
         "ex4.initialize_clusters()\n",
         "ex4.MacQueen(make_plots=False)\n",
         "own_NMI= normalized_mutual_info_score(data_htru_raw[:,-1], ex4.points[:,-2])\n",
-        "print(own_NMI)\n",
+        "print('own implementation:',own_NMI)\n",
         "\n",
         "#Sklearn clustering to compare\n",
         "from sklearn.cluster import KMeans\n",
         "kmeans = KMeans(n_clusters=2, random_state=0).fit_predict(data_htru)\n",
         "sklearn_NMI=normalized_mutual_info_score(data_htru_raw[:,8], kmeans)\n",
         "\n",
-        "print(sklearn_NMI)"
+        "print('sklearn implementation:',sklearn_NMI)"
       ],
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "ITERATION 0 2020-03-22 12:49:52.153202\n",
-            "ITERATION 1 2020-03-22 12:49:52.617683\n",
-            "ITERATION 2 2020-03-22 12:49:52.802889\n",
-            "ITERATION 3 2020-03-22 12:49:52.968688\n",
-            "ITERATION 4 2020-03-22 12:49:53.114894\n",
-            "ITERATION 5 2020-03-22 12:49:53.260394\n",
-            "ITERATION 6 2020-03-22 12:49:53.394365\n",
-            "ITERATION 7 2020-03-22 12:49:53.544444\n",
-            "ITERATION 8 2020-03-22 12:49:53.674894\n",
-            "ITERATION 9 2020-03-22 12:49:53.808721\n",
-            "ITERATION 10 2020-03-22 12:49:53.937517\n",
-            "ITERATION 11 2020-03-22 12:49:54.071056\n",
-            "ITERATION 12 2020-03-22 12:49:54.207138\n",
-            "ITERATION 13 2020-03-22 12:49:54.340502\n",
-            "ITERATION 14 2020-03-22 12:49:54.473557\n",
-            "ITERATION 15 2020-03-22 12:49:54.608775\n",
-            "ITERATION 16 2020-03-22 12:49:54.737772\n",
-            "0.02649673183252321\n",
-            "0.02643778644792407\n"
+            "ITERATION 0 2020-03-22 12:55:54.625939\n",
+            "ITERATION 1 2020-03-22 12:55:55.047456\n",
+            "ITERATION 2 2020-03-22 12:55:55.230981\n",
+            "ITERATION 3 2020-03-22 12:55:55.398736\n",
+            "ITERATION 4 2020-03-22 12:55:55.571941\n",
+            "ITERATION 5 2020-03-22 12:55:55.744914\n",
+            "ITERATION 6 2020-03-22 12:55:55.905866\n",
+            "ITERATION 7 2020-03-22 12:55:56.066763\n",
+            "ITERATION 8 2020-03-22 12:55:56.193185\n",
+            "ITERATION 9 2020-03-22 12:55:56.328221\n",
+            "ITERATION 10 2020-03-22 12:55:56.455445\n",
+            "ITERATION 11 2020-03-22 12:55:56.587724\n",
+            "ITERATION 12 2020-03-22 12:55:56.713544\n",
+            "ITERATION 13 2020-03-22 12:55:56.849036\n",
+            "ITERATION 14 2020-03-22 12:55:56.977872\n",
+            "ITERATION 15 2020-03-22 12:55:57.117260\n",
+            "ITERATION 16 2020-03-22 12:55:57.244695\n",
+            "own implementation: 0.02649673183252321\n",
+            "sklearn implementation: 0.02643778644792407\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d6Hw1Knu6CfB",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "e1487c6d-88d0-4295-d910-f423f09cfea7"
-      },
-      "source": [
-        "data_skin_raw[:,-1]-1"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0., 0., 0., ..., 1., 1., 1.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
         }
       ]
     },
